@@ -1,5 +1,9 @@
 2007-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/src/PortCore.cpp: Now have callbacks for
+	connections/disconnections - use Port::setReporter and
+	BufferedPort:setReporter methods.
+
 	* conf/YarpVersion.cmake: froze version 2.1.8
 
 	* src/libYARP_OS/src/PortCore.cpp: Returned structured
